added search bar and two submit buttons

--- a/style.css
+++ b/style.css
@@ -10,8 +10,30 @@
     float: right;
 }
 
+nav a {
+    color: #000;
+    opacity: 0.75;
+    text-decoration: none;
+}
+
 #logo {
     text-align: center;
     padding-top: 200px;
 
+}
+
+#search_bar {
+    text-align: center;
+    margin-top: 15px;
+}
+
+#buttons {
+    text-align: center;
+    margin-top: 10px;
+}
+
+#profile_pic {
+    height: 32px;
+    width: 32px;
+    border-radius: 100;
 }
