--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ nav a {
     color: #000;
     opacity: 0.75;
     text-decoration: none;
+    padding: 0px 5px 0px 5px;
 }
+
 
 #logo {
     text-align: center;
@@ -32,8 +34,17 @@ nav a {
     margin-top: 10px;
 }
 
-#profile_pic {
-    height: 32px;
-    width: 32px;
-    border-radius: 100;
+.footer {
+    display:block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+#footer_left {
+    display: inline-block;
+}
+
+#footer_right {
+    float: right;
 }
