--- a/style.css
+++ b/style.css
@@ -34,17 +34,30 @@ nav a {
     margin-top: 10px;
 }
 
+
 .footer {
     display:block;
     position: absolute;
     bottom: 0;
     width: 100%;
+    background-color: rgba(224, 215, 215, 0.904)
 }
 
 #footer_left {
     display: inline-block;
 }
+#footer_left a {
+    color: #000;
+    text-decoration: none;
+    padding: 0px 5px 0px 5px;
+}
 
 #footer_right {
     float: right;
+}
+
+#footer_right a {
+    color: #000;
+    text-decoration: none;
+    padding: 0px 5px 0px 5px;
 }
